# simple-hello-world-node-saanvikauddagiri-ops

./: CMakeLists.txt
src/: hello_node.cpp
